--- a/src/.env
+++ b/src/.env
@@ -1,4 +1,4 @@
-DISCORD_TOKEN= 'MTMwODYxMzUwNzgzODc3NTM0Nw.GJ7siF.Cyg6QnazCd3pNkrLJeGiuV-YEl6_MGqmTPOzM0'
+DISCORD_TOKEN= 'MTMwOTM2NTg4NDc0NTI4OTc3OA.GOJRjG.eut0llVUcv9wYjEkxxtszLIvMJGPc6N2DoAG_I'
 MONGODB_URI= 'mongodb+srv://ksharjeel075:6ULNBKodVHu9EMZJ@cluster0.ucjzl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
 TWITTER_API_KEY=your_twitter_api_key
 TRADINGVIEW_API_KEY=your_tradingview_api_key
