--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.2",
+    "node-cron": "^3.0.3",
     "rss-parser": "^3.13.0",
     "twitter-api-v2": "^1.18.2",
     "winston": "^3.17.0"
