--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@solana/web3.js": "^1.95.5",
     "axios": "^1.7.7",
     "canvas": "^2.11.2",
     "cron": "^3.2.1",
