--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.8.2",
     "node-cron": "^3.0.3",
     "rss-parser": "^3.13.0",
+    "technicalindicators": "^3.1.0",
     "twitter-api-v2": "^1.18.2",
     "winston": "^3.17.0"
   },
