--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "canvas": "^2.11.2",
     "cron": "^3.2.1",
     "discord.js": "^14.16.3",
+    "discord.js-captcha": "^3.0.8",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.2",
