--- a/src/.env
+++ b/src/.env
@@ -1,15 +1,14 @@
 DISCORD_TOKEN= 'MTMwODYxMzUwNzgzODc3NTM0Nw.GJ7siF.Cyg6QnazCd3pNkrLJeGiuV-YEl6_MGqmTPOzM0'
 MONGODB_URI= 'mongodb+srv://ksharjeel075:6ULNBKodVHu9EMZJ@cluster0.ucjzl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
-TWITTER_API_KEY=your_twitter_api_key
+TWITTER_API_KEY='5ePWIdgjPrJfL2QSi61DN4MoE'
+Twitter_secret = 'PrEZOomSJ4RtktRpdomazg8mro7fGl3A7UUSiYmC5MPH7clkbi'
+bear_token ='AAAAAAAAAAAAAAAAAAAAAHP9xAEAAAAAhUURiXxSrs3VPZW9SRjE2D5j5OU%3DUoHk5oUtEWIyU45oNp7fry6QBO9gr7PCrB8vtyCHCfEj38wGba'
+access_token = '1862371100702736384-vSzh4DYYzDeL4jZUaGlUXMZHslGojP'
+access_token_secret = 'QhHY0QxuKVVOiKJDsCoeS8K1a4WJawktJLxreebuOD6ik'
 TRADINGVIEW_API_KEY=your_tradingview_api_key
 SOLANA_API_KEY=your_solana_api_key
 CLIENT_ID="1308613507838775347"
 GUILD_ID="1308612610538733568"
-TWITTER_APP_KEY=your_twitter_app_key
-TWITTER_APP_SECRET=your_twitter_app_secret
-TWITTER_ACCESS_TOKEN=your_twitter_access_token
-TWITTER_ACCESS_SECRET=your_twitter_access_secret
-TWITTER_BEARER_TOKEN=your_twitter_bearer_token
-TRADINGVIEW_API_KEY=your_tradingview_api_key
-LUNARCRUSH_API_KEY=your_lunarcrush_api_key
-WHALE_ALERT_API_KEY=your_whale_alert_api_key
+# Twitter
+id = 'Z09lYTNLeVBLUlFTX21GTk1QUnY6MTpjaQ'
+secret = 'xpLBllSChCXB3a_uyxg0owW_o5gx8irqYoUrEoNYgQiWks6Wvy'
